--- a/src/Application/Pages/Account/User Mananger/UsersMananger.css
+++ b/src/Application/Pages/Account/User Mananger/UsersMananger.css
@@ -100,7 +100,11 @@
 }
 
 th:nth-child(1), td:nth-child(1) {
-  width: 25%;
+  width: 20%;
+}
+
+th:nth-child(5), td:nth-child(5) {
+  width: 20%;
 }
 
 .trash-img {
