--- a/src/Application/Pages/Account/Contact/Contact.css
+++ b/src/Application/Pages/Account/Contact/Contact.css
@@ -31,7 +31,7 @@
   display: flex;
   flex-direction: row;
   align-content: space-around;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -58,9 +58,10 @@
 }
 
 .tel-list p {
-padding-top: 10px;
+  padding-top: 10px;
 }
-.tel-list  li {
+
+.tel-list li {
   opacity: 1;
   display: flex;
   flex-direction: column;
@@ -90,7 +91,6 @@ padding-top: 10px;
   margin: 1% auto;
 }
 
-
 .div-sub-ans {
   display: flex;
   width: 100%;
@@ -107,8 +107,7 @@ padding-top: 10px;
   flex-direction: row;
 }
 
-.div-end{
+.div-end {
   width: 100%;
   margin: 3%;
-
 }
