iframe payments loading

--- a/src/Application/Pages/Account/Functionalities/Payments.css
+++ b/src/Application/Pages/Account/Functionalities/Payments.css
@@ -8,7 +8,10 @@
 }
 
 .iframe-function {
-  height: 60vh;
+  height: 100vh;
+  margin: 3%;
+  background: url(../../../../Assets/Loading.gif) center center no-repeat;
+  background-size: 150px;
 }
 
 .div-inputs {
