Iframe click refer, for loadign modal

--- a/src/Application/Pages/Account/Functionalities/Payments.css
+++ b/src/Application/Pages/Account/Functionalities/Payments.css
@@ -8,10 +8,10 @@
 }
 
 .iframe-function {
-  height: 100vh;
-  margin: 3%;
-  background: url(../../../../Assets/Loading.gif) center center no-repeat;
-  background-size: 150px;
+  height: 70vh;
+  width: 100%;
+  /* background: url(../../../../Assets/Loading.gif) center center no-repeat;
+  background-size: 150px; */
 }
 
 .div-inputs {
