--- a/src/Application/Pages/Account/Functionalities/Subs/FunctionalitiesModule.css
+++ b/src/Application/Pages/Account/Functionalities/Subs/FunctionalitiesModule.css
@@ -1,8 +1,7 @@
 .functionalities-module {
-  width: 100%;
-  height: 100%;
+  width: 220px;
+  height: 220px;
   border-radius: 10px;
-  background-color: #38C6AE;
   z-index: 9999;
   cursor: pointer;
   display: flex;
@@ -10,18 +9,20 @@
   align-items: center;
   text-align: center;
   justify-content: center;
-  margin: 3%;
-  color: #ffffff;
+  margin: 25px;
+  color: #474747;
+  font-weight: bolder;
+  background-color: #ebebeb;
+  font-size: 1.1rem;
 }
 
 .functionalities-module:hover {
-
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
   transition: 200ms;
-  color: #F1F1F1;
-  background-color: #017663;
-  text-decoration: underline;
-
+  color: #ffffff;
+  font-weight: bolder;
+  background-color: #38C6AE;
+  font-size: 1.1rem;
 }
 
 .functionalities-module img {
@@ -35,6 +36,3 @@
   animation-direction: alternate-reverse;
 }
 
-.noframe {
-  display: none;
-}
