--- a/src/Application/Pages/Account/Functionalities/Functionalities.css
+++ b/src/Application/Pages/Account/Functionalities/Functionalities.css
@@ -7,25 +7,42 @@
   width: 100%;
 }
 
-.div-sub-functionalities {
-  height: auto;
-  display: grid;
-  grid-template-rows: auto;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin: 3%;
-  /* margin-top: 5%; */
-  margin-bottom: 5%;
-  grid-gap: 0%;
-  gap: 25px;
-  justify-items: center;
-}
-
 .div-sub-functionalities-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   margin: 3%;
 }
 
-.noframe {
+.div-sub-func {
+  align-items: center;
+  text-align: center;
+}
+
+.disclaimer-payments {
   display: none;
+}
+
+.disclaimer-payments-on {
+  display: flex;
+  background-color: bisque;
+  border-radius: 10px 10px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  padding: 3%;
+  margin: 3% ;
+  z-index: 99999999999 !important;
+  width: 50%;
+  left: 3%;
+
+}
+
+.disclaimer-payments-on p {
+  font-size: 0.85em;
+  color: #414141;
+}
+
+.div-sub-functionalities-group h1 {
+  margin-bottom: 30px !important;
 }
 
 @media only screen and (max-width: 1024px) {
