--- a/src/Application/Pages/Account/Functionalities/Pages/FunctionalitiesPagesCommon.css
+++ b/src/Application/Pages/Account/Functionalities/Pages/FunctionalitiesPagesCommon.css
@@ -3,7 +3,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  min-height: 80vh;
+  min-height: 90vh;
   width: 100%;
 }
 
@@ -21,7 +21,7 @@
 }
 
 .div-sub-questions a {
-  width: fit-content;
+  width: 30%;
 }
 
 .section-quests-links img {
@@ -36,4 +36,57 @@
 .section-quests-links {
   margin: 3%;
   width: 60%;
+}
+
+/* Outros */
+.div-others {
+  display: flex;
+  margin: 3%;
+  flex-direction: column;
+}
+
+.div-emergencia {
+  display: flex;
+  margin: 3%;
+}
+
+.div-emergencia div {
+  margin-left: 3%;
+}
+
+.div-emergencia img {
+  width: 50px;
+}
+
+.div-emergencia p {
+  width: max-content;
+  margin-top: 10px;
+  font-style: oblique;
+}
+
+.div-others-coord {
+  display: flex;
+  margin-left: 3%;
+}
+
+.div-coord {
+  margin: 3%;
+  display: flex;
+  align-content: center;
+  align-items: center;
+}
+
+.div-coord div {
+  margin: 3%;
+}
+
+.div-others-coord img {
+  width: 50px;
+  margin: 3%;
+}
+
+.div-others-coord p {
+  margin-top: 5px;
+  font-style: oblique;
+  color: #474747;
 }
