--- a/src/Application/Pages/Account/Functionalities/Subs/DisclaimerPayments.css
+++ b/src/Application/Pages/Account/Functionalities/Subs/DisclaimerPayments.css
@@ -42,7 +42,6 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #414141;
   z-index: 9999;
-  opacity: 50%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
